javascript/iptables.txt
# Generated by iptables-save v1.8.7 on Fri Mar  7 07:39:47 2025
*raw
:PREROUTING ACCEPT [248332:31311010]
:OUTPUT ACCEPT [250937:18830747]
:zone_zone1_helper - [0:0]
-A PREROUTING -i br-lan.1 -m comment --comment "!fw3: zone1 CT helper assignment" -j zone_zone1_helper
-A OUTPUT -p tcp -m tcp --dport 554 -j CT --helper rtsp
-A OUTPUT -p tcp -m tcp --dport 1723 -j CT --helper pptp
-A zone_zone1_helper -p udp -m comment --comment "!fw3: Amanda backup and archiving proto" -m udp --dport 10080 -j CT --helper amanda
-A zone_zone1_helper -p udp -m comment --comment "!fw3: RAS proto tracking" -m udp --dport 1719 -j CT --helper RAS
-A zone_zone1_helper -p tcp -m comment --comment "!fw3: Q.931 proto tracking" -m tcp --dport 1720 -j CT --helper Q.931
-A zone_zone1_helper -p tcp -m comment --comment "!fw3: IRC DCC connection tracking" -m tcp --dport 6667 -j CT --helper irc
-A zone_zone1_helper -p tcp -m comment --comment "!fw3: PPTP VPN connection tracking" -m tcp --dport 1723 -j CT --helper pptp
-A zone_zone1_helper -p tcp -m comment --comment "!fw3: SIP VoIP connection tracking" -m tcp --dport 5060 -j CT --helper sip
-A zone_zone1_helper -p udp -m comment --comment "!fw3: SIP VoIP connection tracking" -m udp --dport 5060 -j CT --helper sip
-A zone_zone1_helper -p udp -m comment --comment "!fw3: SNMP monitoring connection tracking" -m udp --dport 161 -j CT --helper snmp
-A zone_zone1_helper -p udp -m comment --comment "!fw3: TFTP connection tracking" -m udp --dport 69 -j CT --helper tftp
-A zone_zone1_helper -p tcp -m comment --comment "!fw3: RTSP connection tracking" -m tcp --dport 554 -j CT --helper rtsp
COMMIT
# Completed on Fri Mar  7 07:39:47 2025
# Generated by iptables-save v1.8.7 on Fri Mar  7 07:39:47 2025
*mangle
:PREROUTING ACCEPT [248332:31311010]
:INPUT ACCEPT [242751:29423433]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [250937:18830747]
:POSTROUTING ACCEPT [259365:19336427]
:gsdpi_hook_mark - [0:0]
:gsdpi_hook_pre - [0:0]
:mwan3_connected - [0:0]
:mwan3_hook - [0:0]
:mwan3_iface_in_wan0 - [0:0]
:mwan3_ifaces_in - [0:0]
:mwan3_policy_mwan_policy4096 - [0:0]
:mwan3_policy_wan0_auto - [0:0]
:mwan3_policy_wan0_dns - [0:0]
:mwan3_rules - [0:0]
-A PREROUTING -j mwan3_hook
-A PREROUTING -j gsdpi_hook_pre
-A FORWARD -o eth1 -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "!fw3: Zone wan0 MTU fixing" -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i eth1 -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "!fw3: Zone wan0 MTU fixing" -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -j mwan3_hook
-A POSTROUTING -j gsdpi_hook_mark
-A gsdpi_hook_mark -j CONNMARK --save-mark --nfmask 0xf --ctmask 0xf
-A gsdpi_hook_pre -m mark --mark 0x0/0xf -j CONNMARK --restore-mark --nfmask 0xf --ctmask 0xf
-A mwan3_connected -m set --match-set mwan3_connected dst -j MARK --set-xmark 0xff00/0xff00
-A mwan3_hook -m mark --mark 0x0/0xff00 -j CONNMARK --restore-mark --nfmask 0xff00 --ctmask 0xff00
-A mwan3_hook -m mark --mark 0x0/0xff00 -j mwan3_ifaces_in
-A mwan3_hook -m mark --mark 0x0/0xff00 -j mwan3_connected
-A mwan3_hook -m mark --mark 0x0/0xff00 -j mwan3_rules
-A mwan3_hook -j CONNMARK --save-mark --nfmask 0xff00 --ctmask 0xff00
-A mwan3_iface_in_wan0 -i eth1 -m mark --mark 0x0/0xff00 -m comment --comment wan0 -j MARK --set-xmark 0x100/0xff00
-A mwan3_ifaces_in -m mark --mark 0x0/0xff00 -j mwan3_iface_in_wan0
-A mwan3_policy_mwan_policy4096 -m mark --mark 0x0/0xff00 -m comment --comment "wan0 5 5" -j MARK --set-xmark 0x100/0xff00
-A mwan3_policy_wan0_auto -m mark --mark 0x0/0xff00 -m comment --comment "wan0 1 1" -j MARK --set-xmark 0x100/0xff00
-A mwan3_policy_wan0_dns -m mark --mark 0x0/0xff00 -m comment --comment "wan0 1 1" -j MARK --set-xmark 0x100/0xff00
-A mwan3_rules -p udp -m udp --dport 67 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_rules -p udp -m udp --dport 68 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_rules -m set --match-set wan0_dns_ipset1 dst,dst -m mark --mark 0x0/0xff00 -j mwan3_policy_wan0_dns
-A mwan3_rules -m set --match-set wan0_dns_ipset2 dst,dst -m mark --mark 0x0/0xff00 -j mwan3_policy_wan0_dns
-A mwan3_rules -m mark --mark 0x0/0xff00 -j mwan3_policy_mwan_policy4096
COMMIT
# Completed on Fri Mar  7 07:39:47 2025
# Generated by iptables-save v1.8.7 on Fri Mar  7 07:39:47 2025
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:forwarding_rule - [0:0]
:forwarding_wan0_rule - [0:0]
:forwarding_zone1_rule - [0:0]
:input_rule - [0:0]
:input_wan0_rule - [0:0]
:input_zone1_rule - [0:0]
:output_rule - [0:0]
:output_wan0_rule - [0:0]
:output_zone1_rule - [0:0]
:reject - [0:0]
:web_wan0_policy - [0:0]
:zone_wan0_dest_ACCEPT - [0:0]
:zone_wan0_dest_DROP - [0:0]
:zone_wan0_forward - [0:0]
:zone_wan0_input - [0:0]
:zone_wan0_output - [0:0]
:zone_wan0_src_DROP - [0:0]
:zone_zone1_dest_ACCEPT - [0:0]
:zone_zone1_forward - [0:0]
:zone_zone1_input - [0:0]
:zone_zone1_output - [0:0]
:zone_zone1_src_ACCEPT - [0:0]
-A INPUT -i lo -m comment --comment "!fw3" -j ACCEPT
-A INPUT -m comment --comment "!fw3: Custom input rule chain" -j input_rule
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "!fw3" -j ACCEPT
-A INPUT -i eth1 -m comment --comment "!fw3" -j zone_wan0_input
-A INPUT -i br-lan.1 -m comment --comment "!fw3" -j zone_zone1_input
-A FORWARD -m comment --comment "!fw3: Custom forwarding rule chain" -j forwarding_rule
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "!fw3" -j ACCEPT
-A FORWARD -i eth1 -m comment --comment "!fw3" -j zone_wan0_forward
-A FORWARD -i br-lan.1 -m comment --comment "!fw3" -j zone_zone1_forward
-A OUTPUT -o lo -m comment --comment "!fw3" -j ACCEPT
-A OUTPUT -m comment --comment "!fw3: Custom output rule chain" -j output_rule
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "!fw3" -j ACCEPT
-A OUTPUT -o eth1 -m comment --comment "!fw3" -j zone_wan0_output
-A OUTPUT -o br-lan.1 -m comment --comment "!fw3" -j zone_zone1_output
-A input_wan0_rule -j web_wan0_policy
-A reject -p tcp -m comment --comment "!fw3" -j REJECT --reject-with tcp-reset
-A reject -m comment --comment "!fw3" -j REJECT --reject-with icmp-port-unreachable
-A web_wan0_policy -p tcp -m tcp --dport 443 -j ACCEPT
-A web_wan0_policy -p tcp -m tcp --dport 80 -j ACCEPT
-A zone_wan0_dest_ACCEPT -o eth1 -m conntrack --ctstate INVALID -m comment --comment "!fw3: Prevent NAT leakage" -j DROP
-A zone_wan0_dest_ACCEPT -o eth1 -m comment --comment "!fw3" -j ACCEPT
-A zone_wan0_dest_DROP -o eth1 -m comment --comment "!fw3" -j DROP
-A zone_wan0_forward -m comment --comment "!fw3: Custom wan0 forwarding rule chain" -j forwarding_wan0_rule
-A zone_wan0_forward -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port forwards" -j ACCEPT
-A zone_wan0_forward -m comment --comment "!fw3" -j zone_wan0_dest_DROP
-A zone_wan0_input -m comment --comment "!fw3: Custom wan0 input rule chain" -j input_wan0_rule
-A zone_wan0_input -p udp -m udp --dport 68 -m comment --comment "!fw3: WAN1-Allow-DHCP-Renew" -j ACCEPT
-A zone_wan0_input -p icmp -m icmp --icmp-type 8 -m comment --comment "!fw3: WAN1-Allow-Ping" -j ACCEPT
-A zone_wan0_input -p igmp -m comment --comment "!fw3: WAN1-Allow-IGMP" -j ACCEPT
-A zone_wan0_input -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port redirections" -j ACCEPT
-A zone_wan0_input -m comment --comment "!fw3" -j zone_wan0_src_DROP
-A zone_wan0_output -m comment --comment "!fw3: Custom wan0 output rule chain" -j output_wan0_rule
-A zone_wan0_output -m comment --comment "!fw3" -j zone_wan0_dest_ACCEPT
-A zone_wan0_src_DROP -i eth1 -m comment --comment "!fw3" -j DROP
-A zone_zone1_dest_ACCEPT -o br-lan.1 -m comment --comment "!fw3" -j ACCEPT
-A zone_zone1_forward -m comment --comment "!fw3: Custom zone1 forwarding rule chain" -j forwarding_zone1_rule
-A zone_zone1_forward -m comment --comment "!fw3: zone1-Forward-To-all" -j ACCEPT
-A zone_zone1_forward -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port forwards" -j ACCEPT
-A zone_zone1_forward -m comment --comment "!fw3" -j zone_zone1_dest_ACCEPT
-A zone_zone1_input -m comment --comment "!fw3: Custom zone1 input rule chain" -j input_zone1_rule
-A zone_zone1_input -p udp -m udp --sport 67 --dport 67 -m comment --comment "!fw3: zone1-Allow-DHCP-Input" -j ACCEPT
-A zone_zone1_input -p udp -m udp --sport 67 --dport 68 -m comment --comment "!fw3: zone1-Allow-DHCP-Input" -j ACCEPT
-A zone_zone1_input -p udp -m udp --sport 68 --dport 67 -m comment --comment "!fw3: zone1-Allow-DHCP-Input" -j ACCEPT
-A zone_zone1_input -p udp -m udp --sport 68 --dport 68 -m comment --comment "!fw3: zone1-Allow-DHCP-Input" -j ACCEPT
-A zone_zone1_input -p tcp -m tcp --dport 22 -m comment --comment "!fw3: Anti-lockout-Rule" -j ACCEPT
-A zone_zone1_input -p tcp -m tcp --dport 80 -m comment --comment "!fw3: Anti-lockout-Rule" -j ACCEPT
-A zone_zone1_input -p tcp -m tcp --dport 443 -m comment --comment "!fw3: Anti-lockout-Rule" -j ACCEPT
-A zone_zone1_input -p tcp -m tcp --dport 14 -m comment --comment "!fw3: Allow-Controller-Input" -j ACCEPT
-A zone_zone1_input -p udp -m udp --dport 14 -m comment --comment "!fw3: Allow-Controller-Input" -j ACCEPT
-A zone_zone1_input -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port redirections" -j ACCEPT
-A zone_zone1_input -m comment --comment "!fw3" -j zone_zone1_src_ACCEPT
-A zone_zone1_output -m comment --comment "!fw3: Custom zone1 output rule chain" -j output_zone1_rule
-A zone_zone1_output -p udp -m udp --sport 67 --dport 67 -m comment --comment "!fw3: zone1-Allow-DHCP-Output" -j zone_zone1_dest_ACCEPT
-A zone_zone1_output -p udp -m udp --sport 67 --dport 68 -m comment --comment "!fw3: zone1-Allow-DHCP-Output" -j zone_zone1_dest_ACCEPT
-A zone_zone1_output -p udp -m udp --sport 68 --dport 67 -m comment --comment "!fw3: zone1-Allow-DHCP-Output" -j zone_zone1_dest_ACCEPT
-A zone_zone1_output -p udp -m udp --sport 68 --dport 68 -m comment --comment "!fw3: zone1-Allow-DHCP-Output" -j zone_zone1_dest_ACCEPT
-A zone_zone1_output -p tcp -m tcp --sport 14 -m comment --comment "!fw3: Allow-Controller-Output" -j zone_zone1_dest_ACCEPT
-A zone_zone1_output -p udp -m udp --sport 14 -m comment --comment "!fw3: Allow-Controller-Output" -j zone_zone1_dest_ACCEPT
-A zone_zone1_output -m comment --comment "!fw3" -j zone_zone1_dest_ACCEPT
-A zone_zone1_src_ACCEPT -i br-lan.1 -m conntrack --ctstate NEW,UNTRACKED -m comment --comment "!fw3" -j ACCEPT
COMMIT
# Completed on Fri Mar  7 07:39:48 2025
# Generated by iptables-save v1.8.7 on Fri Mar  7 07:39:48 2025
*nat
:PREROUTING ACCEPT [16938:4532026]
:INPUT ACCEPT [9:432]
:OUTPUT ACCEPT [18341:1509041]
:POSTROUTING ACCEPT [8873:735810]
:postrouting_rule - [0:0]
:postrouting_wan0_rule - [0:0]
:postrouting_zone1_rule - [0:0]
:prerouting_rule - [0:0]
:prerouting_wan0_rule - [0:0]
:prerouting_zone1_rule - [0:0]
:zone_wan0_postrouting - [0:0]
:zone_wan0_prerouting - [0:0]
:zone_zone1_postrouting - [0:0]
:zone_zone1_prerouting - [0:0]
-A PREROUTING -m comment --comment "!fw3: Custom prerouting rule chain" -j prerouting_rule
-A PREROUTING -i eth1 -m comment --comment "!fw3" -j zone_wan0_prerouting
-A PREROUTING -i br-lan.1 -m comment --comment "!fw3" -j zone_zone1_prerouting
-A POSTROUTING -m comment --comment "!fw3: Custom postrouting rule chain" -j postrouting_rule
-A POSTROUTING -o eth1 -m comment --comment "!fw3" -j zone_wan0_postrouting
-A POSTROUTING -o br-lan.1 -m comment --comment "!fw3" -j zone_zone1_postrouting
-A zone_wan0_postrouting -m comment --comment "!fw3: Custom wan0 postrouting rule chain" -j postrouting_wan0_rule
-A zone_wan0_postrouting -m comment --comment "!fw3" -j MASQUERADE
-A zone_wan0_prerouting -m comment --comment "!fw3: Custom wan0 prerouting rule chain" -j prerouting_wan0_rule
-A zone_zone1_postrouting -m comment --comment "!fw3: Custom zone1 postrouting rule chain" -j postrouting_zone1_rule
-A zone_zone1_prerouting -m comment --comment "!fw3: Custom zone1 prerouting rule chain" -j prerouting_zone1_rule
COMMIT
# Completed on Fri Mar  7 07:39:48 2025
